@@ -56,7 +56,8 @@ You will need to have [Maven](http://maven.apache.org/) installed in order to bu
 ```
 $ git clone git@github.com:bigdatagenomics/adam.git
 $ cd adam
-$ mvn clean package
+$ export "MAVEN_OPTS=-Xmx512m -XX:MaxPermSize=128m"
+$ mvn clean package -DskipTests
 ...
 [INFO] ------------------------------------------------------------------------
 [INFO] BUILD SUCCESS
